fixed problem with alignment of carousel and pictures

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,13 @@
     list-style-type: none;
   }
 }
+/* this is to even out the slider and picture section */
+@media (min-width: 550px){
+.column, .columns {
+    margin-left: 1.55%;
+    margin-right: 1.01%;
+ }
+}
 
 body{
   font-family: 'Cinzel'
@@ -64,8 +71,11 @@ p {
 
 img{
   max-width:100%;
-  max-height:100%;
+  max-height: 100%;
 }
+
+
+
 footer {
   text-align: center;
 }
